# startrail

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
data/sample/: README.md
notebooks/: 01_simulation.ipynb  02_single_star_trail.ipynb
startrail/: detect.py  fit.py  io.py  models.py  utils.py
startrail/simulate/: __init__.py  image.py  noise.py  psf.py  trail.py
tests/: conftest.py  test_detect.py  test_fit.py  test_io.py  test_models.py  test_simulate.py
