[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "startrail"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "astropy>=6",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "photutils>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "jupyter",
    "nbconvert",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["startrail*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
